# utexo-rgb-lib

./: .gitignore  Cargo.toml
.github/: RELEASE_SETUP.md
.github/workflows/: release.yml  sync-upstream.yml
bindings/: README.md
bindings/c-ffi/: Cargo.toml
bindings/c-ffi/src/: lib.rs  utils.rs
bindings/uniffi/: Cargo.toml
bindings/uniffi/src/: lib.rs  rgb-lib.udl
migration/: Cargo.toml
migration/src/: lib.rs  m20251017_074408_asset_update.rs  m20251105_132121_asset_update.rs
src/: error.rs  lib.rs  utils.rs
src/api/: mod.rs  proxy.rs  reject_list.rs
src/database/: enums.rs  mod.rs
src/database/entities/: asset.rs
src/wallet/: offline.rs  online.rs  rust_only.rs
src/wallet/test/: blind_receive.rs  create_utxos.rs  drain_to.rs  get_asset_balance.rs  get_asset_metadata.rs  go_online.rs  inflate.rs  issue_asset_cfa.rs  issue_asset_ifa.rs  issue_asset_nia.rs  issue_asset_uda.rs  mod.rs  new.rs  refresh.rs  rust_only.rs  send.rs  send_btc.rs
src/wallet/test/utils/: api.rs  chain.rs  helpers.rs
tests/: compose.yaml  regtest.sh
