[package]
name = "rgb-lib-c-ffi"
version = "0.1.0"
authors = [
    "Zoe Faltibà <zoefaltiba@gmail.com>",
    "Nicola Busanello <nicola.busanello@gmail.com>",
]
edition = "2024"
rust-version = "1.85.0"
build = "build.rs"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "rgblibcffi"

[dependencies]
rgb-lib = { version = "0.3.0-beta.4", path = "../../", features = [
    "electrum",
    "esplora",
] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
] }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }

[build-dependencies]
cbindgen = "0.29.0"

[workspace]

[features]
default = []
all = ["camel_case"]
camel_case = ["rgb-lib/camel_case"]

[patch.crates-io]
rgb-strict-encoding = { git = "http://github.com/rgb-protocol/rgb-strict-encoding", branch = "master" }
rgb-consensus = { git = "http://github.com/rgb-protocol/rgb-consensus", branch = "master" }
rgb-ops = { git = "http://github.com/rgb-protocol/rgb-ops", branch = "master" }
rgb-invoicing = { git = "http://github.com/rgb-protocol/rgb-ops", branch = "master" }
